\name{EBImage-NEWS}
\title{News for Package 'EBImage'}

\section{Changes in version 4.20.0}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item 'abind()' method for combining Image arrays
      \item 'floodFill()' has been vectorized over its arguments 'pt' and 'col' allowing to specify multiple start points and different fill colors
    }
  }
  \subsection{SIGNIFICANT USER-VISIBLE CHANGES}{
    \itemize{
      \item 'display()' "browser" mode has been updated to use the htmlwidgets infrastructure
      \item 'filter2()' does not require filter dimensions to be odd numbers when filter size equals image size
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item fixed issues with 'normalize()' (https://github.com/aoles/EBImage/issues/25)
      \item various improvements to the 'clahe()' function
    }
  }
}

\section{Changes in version 4.18.0}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item new arguments to 'display()' enabling control over layout and appearance of image grid in "raster" mode: 'nx' (number of frames in a row), 'drawGrid' (draw lines between frames), 'spacing' (separation between frames) and 'margin' (outer margin around the image)
      \item new function 'clahe()' for improving local contrast in images by performing Contrast Limited Adaptive Histogram Equalization
      \item re-introduced 'output.origin' argument to 'rotate()'
    }
  }
  \subsection{SIGNIFICANT USER-VISIBLE CHANGES}{
    \itemize{
      \item object masks returned by `bwlabel()`, `propagate()`, and `watershed()`, as well as the result of thresh() are now of storage mode integer rather than double
      \item binary kernels constructed by 'makeBrush()' have storage mode integer (previously double)
      \item 'rmObjects()' and 'reenumerate()' now require input of storage mode integer
      \item 'untile()' and morphology operations preserve data storage mode