@@ -1,5 +1,5 @@
 Package: EBImage
-Version: 4.21.3
+Version: 4.21.4
 Title: Image processing and analysis toolbox for R
 Encoding: UTF-8
 Author: Andrzej Oleś, Gregoire Pau, Mike Smith, Oleg Sklyar, Wolfgang Huber, with contributions from Joseph Barry and Philip A. Marais
